# discord-error-logger

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
discord_logger/: __init__.py
discord_logger/constants/: global_constants.py
discord_logger/internal/: bot_client.py  config.py  internal_api_receiver.py
src/discord_logger/: __init__.py
src/discord_logger/constants/: environment_variables.py  global_constants.py
src/discord_logger/internal/: bot_client.py  config.py  internal_api_receiver.py
test/: setup.py
