[tool.poetry]
name = "discord-error-logger"
version = "0.1.0"
description = ""
authors = ["JesseLeung97", "AgentKD6-37"]
readme = "README.md"
packages = [{include = "discord_logger", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

